--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: black;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
@@ -72,8 +72,8 @@ button {
 }
 
 button:hover {
-  background-color: #005bb5;
-  color: #fff;
+  background-color: white;
+  color: black;
 }
 
 a {
@@ -83,6 +83,6 @@ a {
 }
 
 a:hover {
-  color: #005bb5;
+  color: white;
 }
 
