--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
   height: 100vh;
 }
 
@@ -86,3 +87,8 @@ a:hover {
   color: white;
 }
 
+@media (min-width: 768px) {
+  body {
+    font-size: 20px;
+  }
+}
